changes' is much more useful than 'misc edits' or 'code cleanup.'
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

Town portal now has an animation instead of being immediate.
 server/spell_effect.c
Nicolas Weeger 2010-03-25

Have disappearing FLAG_IS_USED_UP items put their inventory on the ground, not on pile top.
 server/time.c
Nicolas Weeger 2010-03-25

Add new flag to object_free() to force inventory contents on the ground instead on pile top.
 common/object.c
 include/object.h
Nicolas Weeger 2010-03-25

Add '!' to pickup to toggle the mode.
 lib/help/pickup.en
 server/c_object.c
Nicolas Weeger 2010-03-25

Basic help text for filtering.
Nicolas Weeger 2010-03-25

Basic filtering on artifacts and formulaes.
Nicolas Weeger 2010-03-24

Enable filtering on archetypes (name and clone's type).
Nicolas Weeger 2010-03-24

Add requestinfo/replyinfo mechanisms to get the news/rules/motd file.  In
this way, client does not need to parse drawinfo commands, and this
functionality is needed in account based logins since the login code path is
different.  Add setup command for loginmethod - work in progress
but needed for testing.
---
socket/request.c: Add setup loginmethod, add send_file() to send files
socket/loop.c: Update requestinfo handling to deal with motd/news/rules
doc/Developers/protocol: Clarify some areas of protocol.  Add information
    about requestinfo/replyinfo for news/rules/motd
MSW 2010-03-23

As per discussion on IRC, some changes to hopefully improve balance - will
await feedback:
common/living.c: Don't have the magic of an item affect wc.  Only if wc
     is explicitly set does it improve the character.